"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2011-07-29	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-81-prsim-keeper-check-10:
	  vpi-prsim now able to process command-line arguments
		with $prsim_options("...") VPI function call.
	  prsim_options class pulled out into main/prsim_options.h
	  const-ified argv argument for prsim::parse_command_options.
	  Test case added.


	* HACKT-00-01-04-main-00-84-81-prsim-keeper-check-09:
	  hacprsim: splitting most of prsim program class into
		separate module, so that vpi-prsim can potentially
		call prsim::parse_command_options() for
		pasing command-options to (before) $prsim().


2011-07-28	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-81-prsim-keeper-check-08:
	  hacprsim: mode-fatal no longer enables keeper-checks 
		unless 1) fast-weak-keepers on and 2) weak-rules on.
		Warning is printed if either is not met.
		Updated test cases.


	* HACKT-00-01-04-main-00-84-81-prsim-keeper-check-07:
	  hacprsim: on keeper-check-failure print both the causing
		node and the output node that failed.
		Added many test cases with broken keepers, missing
		feedback, incorrect combinational feedback.


2011-07-27	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-81-prsim-keeper-check-06:
	  hacprsim: fixed condition for checking floating node, 
		only skip if the candidate fanout node has no fanin.
		Test cases updated, added.


	* HACKT-00-01-04-main-00-84-81-prsim-keeper-check-05:
	  hacprsim: defaulting to keeper-check-fail ignore
		because too much regression test noise.
		Fixed evaluation of floating nodes, to consider
		fanout candidates (of the node that just switched).
		Test cases updated and added.


2011-07-25	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-81-prsim-keeper-check-04: